# easy-di

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
examples/telebot/: __init__.py  handlers.py  main.py  plugs.py
src/easy_di/: __init__.py  base_injector.py  group_injector.py
tests/: base_injector_test.py  group_injector_test.py
